<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x600"
    android:layout_height="@dimen/y1000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_time_setting_workTime_day"
            android:layout_width="@dimen/x251"
            android:layout_height="@dimen/y89"
            android:background="@drawable/work_time_weekday_focused"
            android:gravity="center"
            android:text="@string/everyday"
            android:textColor="@color/white"
            android:textSize="@dimen/ts36" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y60"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/x135"
            android:layout_height="@dimen/y61"
            android:layout_marginRight="@dimen/x80"
            android:background="@drawable/work_timer_start_stop_bg"
            android:gravity="center"
            android:text="@string/time_setting_work_time_start"
            android:textColor="@color/white"
            android:textSize="@dimen/ts24" />

        <TextView
            android:id="@+id/tv_time_setting_workTime_start_hour"
            android:layout_width="@dimen/x135"
            android:layout_height="@dimen/y63"
            android:layout_marginRight="@dimen/x20"
            android:background="@drawable/work_timer_hour_level_focused"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/x40"
            android:text="00"
            android:textColor="@color/white"
            android:textSize="@dimen/ts24" />

        <ImageView
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/y44"
            android:background="@drawable/work_time_sep" />

        <TextView
            android:id="@+id/tv_time_setting_workTime_start_minute"
            android:layout_width="@dimen/x135"
            android:layout_height="@dimen/y63"
            android:layout_marginLeft="@dimen/x20"
            android:background="@drawable/work_timer_hour_level_focused"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/x40"
            android:text="00"
            android:textColor="@color/white"
            android:textSize="@dimen/ts24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y60"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/x135"
            android:layout_height="@dimen/y61"
            android:layout_marginRight="@dimen/x80"
            android:background="@drawable/work_timer_start_stop_bg"
            android:gravity="center"
            android:text="@string/time_setting_work_time_end"
            android:textColor="@color/white"
            android:textSize="@dimen/ts24" />

        <TextView
            android:id="@+id/tv_time_setting_workTime_end_hour"
            android:layout_width="@dimen/x135"
            android:layout_height="@dimen/y63"
            android:layout_marginRight="@dimen/x20"
            android:background="@drawable/work_timer_hour_level_focused"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/x40"
            android:text="00"
            android:textColor="@color/white"
            android:textSize="@dimen/ts24" />

        <ImageView
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/y44"
            android:background="@drawable/work_time_sep" />

        <TextView
            android:id="@+id/tv_time_setting_workTime_end_minute"
            android:layout_width="@dimen/x135"
            android:layout_height="@dimen/y63"
            android:layout_marginLeft="@dimen/x20"
            android:background="@drawable/work_timer_hour_level_focused"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/x40"
            android:text="00"
            android:textColor="@color/white"
            android:textSize="@dimen/ts24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y60"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_time_setting_workTime_confirm"
            android:layout_width="@dimen/x251"
            android:layout_height="@dimen/y89"
            android:background="@drawable/work_time_weekday_focused"
            android:gravity="center"
            android:text="@string/ensure"
            android:textColor="@color/white"
            android:textSize="@dimen/ts36" />
    </LinearLayout>

</LinearLayout>